yaml/javacloudtrader_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: javacloudtrader
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: javacloudtrader
    spec:
      containers:
      - name: javacloudtrader
        image: icpcluster.icp:8500/default/javacloudtrader:1.0
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
