yaml/javacloudtrader_service.yaml
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: javacloudtrader-service
  labels:
    app: javacloudtrader
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: javacloudtrader
