yaml/javacloudtrader_ingress.yaml
#Configure the ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/app-root: "/javacloudtrader"
  name: javacloudtrader-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /CloudTrader
        backend:
          serviceName: javacloudtrader-service
          servicePort: 9443
